# toggl-cli

./: Cargo.toml  README.md
src/: api_client.rs  api_token.rs  args.rs  config.rs  dirs.rs  main.rs  toggl_client.rs
