[package]
name = "toggl-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.24"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.2.0"
directories = "4.0.1"
reqwest = { version = "0.11.14", features = ["json", "blocking", "cookies"] }
serde = "1.0.155"
serde_json = "1.0.94"
toml = "0.7.3"
