[package]
name = "toggl-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.24"
clap = { version = "4.5.34", features = ["derive"] }
clap_complete = "4.2.0"
directories = "4.0.1"
reqwest = { version = "0.12.15", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.7.3"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.2", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", features = ["apple-native"] }

